# codeforces

./: .gitignore  CMakeLists.txt
a2oj-1500-1599/: 1-presents.cpp  35-kuriyama-mirai-stones.cpp  42-pocket-book.cpp
a2oj-1600-1699/: 50-password.cpp
a2oj-under-1300/1-young-physicist/: main.cpp
a2oj-under-1300/110-nearly-lucky-number/: main.cpp
a2oj-under-1300/2-beautiful-matrix/: main.cpp
a2oj-under-1300/200-b-drinks/: main.cpp
a2oj-under-1300/233-perfect-permutation/: main.cpp
a2oj-under-1300/266-stones-on-the-table/: main.cpp
a2oj-under-1300/271-beautiful-year/: main.cpp
a2oj-under-1300/275-lights-out/: main.cpp
a2oj-under-1300/281-word-capitalization/: main.cpp
a2oj-under-1300/3-queue-school/: main.cpp
a2oj-under-1300/30-effective-approach/: main.cpp
a2oj-under-1300/31-dima-and-friends/: main.cpp
a2oj-under-1300/4-borze/: main.cpp
a2oj-under-1300/59-word/: main.cpp
a2oj-under-1300/80-panoramixs-prediction/: main.cpp
a2oj-under-1300/88-iq-test/: main.cpp
a2oj-under-1300/94-free-cash/: main.cpp
a2oj-under-1300/97-appleman-card-game/: main.cpp
contests/1914-div-3/: A.cpp  B.cpp  C.cpp
contests/1919-hello-2024/: A.cpp
contests/914-div-2/: p1.cpp  p2.cpp  p3.cpp  p3_fixed.cpp  p5.cpp
contests/915-div-2/: A.cpp  B.cpp  C.cpp  D.cpp
misc/: 1486-b-eastern-exhibition.cpp  1912-k-kims-quest.cpp  1912-l-lol-lovers.cpp  630-i-parking-lot.cpp
reference/: algorithms.cpp  containers.cpp  custom.cpp  custom.h  custom_tests.cpp  pair.cpp
virt-contests/144/: a-arrival-of-the-general.cpp  b-meeting.cpp  c-anagram-search.cpp  d-missile-silos.cpp  e-competition.cpp
virt-contests/2009/: a-minimize.cpp  b-osu.cpp  c-freya.cpp  d-satyam-counting.cpp
virt-contests/61/: a-ultra-fast-math.cpp  b-hard-work.cpp  c-capture-valerian.cpp  d-eternal-victory.cpp  e-enemy-is-weak.cpp
